# screensnap

./: .gitignore  Cargo.toml  README.md  cleanup.sh  run-gui.sh  run.sh
src/: gui.rs  main.rs
src/ai/: connector.rs  local_model.rs  mod.rs
src/capture/: mod.rs  screenshot.rs  window_finder.rs
