[package]
name = "screensnap"
version = "0.2.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A screenshot tool with local AI analysis using Ollama"

[dependencies]
anyhow = "1.0"
base64 = "0.21"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.10"
eframe = "0.23"
egui = "0.23"
image = "0.24"
log = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
screenshots = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.12"
arboard = { version = "3", optional = true } 

[features]
default = ["clipboard"] # Makes it enabled by default
clipboard = ["dep:arboard"]

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
]}

[target.'cfg(target_os = "linux")'.dependencies]
x11-dl = "2.19"
xcb = "1.2"

[target.'cfg(target_os = "macos")'.dependencies]
# Add any macOS-specific dependencies here